<resources>
    <string name="app_name">Foodster - Food Planner</string>

    <string name="app_title">Foodster</string>

    <string name="user_name">User Name</string>

    <string name="dark_mode">Dark Mode</string>

    <string name="logout">Logout</string>

    <string name="meal_name">Meal Name</string>

    <string name="enter_user_name">User Name</string>

    <string name="enter_password">Password</string>

    <string name="ask_to_signup">Don\'t have an account?</string>

    <string name="signupHyperLink">SignUp</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="meal_image">Meal Image</string>

    <string name="meal_text">Spanish Tortilla</string>

    <string name="top_right_button">Top Right Item Button</string>

    <string name="confirm_password">Confirm Password</string>

    <string name="password">Password</string>

    <string name="name">Name</string>

    <string name="foodster">Foodster</string>

    <string name="signup">Sign Up</string>

    <string name="already_have_an_account">Already Have an Account?</string>

    <string name="login">LOGIN</string>

    <string name="ingredient">Ingredient</string>

    <string name="amount">Amount</string>

    <string name="meal_origin">Origin : British</string>

    <string name="ingredients_sample_text">- Ingredient one

- Ingredient Two

- Ingredient Three

- Ingredient Four

- Ingredient Five</string>

    <string name="ingredient_amounts_sample">- ingredient one amount

- Ingredient Two Amount

- Ingredient Three Amount

- Ingredient Four Amount

- Ingredient Five Amount</string>

    <string name="favorites_header">The Meals You Love!</string>

    <string name="this_week">This Week</string>


    <string name="saturday">Saturday</string>

    <string name="sunday">Sunday</string>

    <string name="monday">Monday</string>

    <string name="tuesday">Tuesday</string>

    <string name="wednesday">Wednesday</string>

    <string name="thursday">Thursday</string>

    <string name="friday">Friday</string>
    <string name="add_from_favorites">Add</string>
    <string name="instructios">Instructions :</string>
    <string name="daily_title">Our Picks For Today!</string>
    <string name="country_search">Search By Country</string>
    <string name="search_category">Search By Category</string>
    <string name="search_ing">Search By Ingredients</string>
    <string name="instructions">Instructions :</string>
    <string name="guestLogin">Login as a guest</string>
    <string name="search">Search</string>
    <string name="specified_search">Specified Search</string>
    <string name="default_google_client_id">283596832584-d90rd3rvvrpno9kv2ipv2bf1jm8ru797.apps.googleusercontent.com</string>
    <string name="hello">Hello</string>
    <string name="loggedin_user_name">Name</string>
    <string name="aroun_the_world">Around The World</string>
    <string name="facebook_app_id">859831555085282</string>
    <string name="fb_login_protocol_scheme">fb859831555085282</string>
    <string name="facebook_client_token">2264e41517e63ca17e77fa5fea552a01</string>
    <string name="passowrd_restriction"><![CDATA[Use 8 or more characters with a mix of letters, numbers & symbols]]></string>
    <string name="email">Email</string>
    <string name="visit_profile">Go to your profile</string>
    <string name="signout">Signout</string>
    <string name="email_login">Email</string>
    <string name="use_google_to_login">use google to login</string>
    <string name="login_using_google">login using google</string>
    <string name="use_facebook_to_login">use facebook to login</string>
    <string name="favorite_meals">Total Meals in Favorites</string>
    <string name="planner_meals">Total Meals In Planner</string>
    <string name="backup_favs">Backup Favorites</string>
    <string name="backup_plans">Backup Planner</string>
</resources>