<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context="fragments.login.LoginFragment">

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/round_rect_stroke"
        android:ems="14"
        android:hint="@string/email_login"
        android:inputType="textEmailSubject"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textColorHint="@color/palette_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/foodster_yellow"
        android:text="@string/login"
        android:textColor="@color/foodster_black"
        android:textSize="@dimen/main_size"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_google" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="48dp"
        android:layout_height="18dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/manropebold"
        android:text="@string/email_login"
        android:textColor="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/manroperegular"
        android:text="@string/ask_to_signup"
        android:textColor="#75757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manropebold"
        android:text="@string/enter_password"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserName" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookButton"
        android:layout_width="28dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/use_facebook_to_login"
        app:layout_constraintBottom_toBottomOf="@+id/login_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_google"
        app:layout_constraintTop_toTopOf="@+id/login_google"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/use_google_to_login"
        android:padding="20dp"
        app:layout_constraintEnd_toStartOf="@+id/facebookButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/signupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/login_using_google"
        android:fontFamily="@font/manropesemibold"
        android:padding="12dp"
        android:text="@string/signupHyperLink"
        android:textColor="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:background="@drawable/round_rect_stroke"
        android:ems="14"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textColorHint="@color/palette_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rfbarbariskarough2_regular"
        android:text="@string/foodster"
        android:textColor="@color/foodster_black"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guestLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rect_stroke"
        android:fontFamily="@font/manrope_bold"
        android:padding="8dp"
        android:text="@string/guestLogin"
        android:textColor="@color/foodster_black"
        app:layout_constraintBottom_toTopOf="@+id/editUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>