<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.meal.MealFragment">

        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:contentDescription="@string/meal_image"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_meal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="260dp"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:visibility="visible"
            app:cardBackgroundColor="#80FFFFFF"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/meal_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/meal_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/meal_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/manrope_extrabold"
                    android:gravity="center_vertical"
                    android:text="@string/meal_text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/meal_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/meal_origin"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline14" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/ingredient"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/ingredient"
            android:textSize="@dimen/main_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/amounts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/amount"
            android:textSize="@dimen/main_size"
            app:layout_constraintBottom_toBottomOf="@+id/ingredient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ingredient"
            app:layout_constraintTop_toTopOf="@+id/ingredient" />

        <TextView
            android:id="@+id/ingredients_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_sample_text"
            app:layout_constraintEnd_toEndOf="@+id/ingredient"
            app:layout_constraintStart_toStartOf="@+id/ingredient"
            app:layout_constraintTop_toBottomOf="@+id/ingredient" />

        <TextView
            android:id="@+id/amounts_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_amounts_sample"
            app:layout_constraintEnd_toEndOf="@+id/amounts"
            app:layout_constraintStart_toEndOf="@+id/ingredient"
            app:layout_constraintTop_toBottomOf="@+id/amounts" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fav_button_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <Button
            android:id="@+id/right_bottom_button"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:background="@drawable/side_button"
            app:backgroundTint="@color/foodster_white"
            app:icon="@drawable/heart"
            app:iconTint="@color/foodster_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fav_button_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circular_shape"
            app:layout_constraintStart_toStartOf="@+id/guideline15"
            app:layout_constraintTop_toTopOf="@+id/guideline16"
            app:srcCompat="@drawable/arrow_small_left" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>